--- a/src/Components/UserCard/UserCard.css
+++ b/src/Components/UserCard/UserCard.css
@@ -15,6 +15,9 @@
   position: relative;
   overflow: hidden;
 }
+.usercard:hover {
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
 .userPicture {
   width: 100px;
   height: 100px;
