Admin Page modification | ReportPage Connected

--- a/src/Admin/AdminLogin.css
+++ b/src/Admin/AdminLogin.css
@@ -1,3 +1,10 @@
 .error {
   border: 1px solid red;
 }
+.adminLoginPage{
+  background: #ebecec;
+  height: 100vh;
+}
+.adminInput{
+  background-color: #ebecec!important;
+}
