--- a/src/Pages/HomePage/Home.css
+++ b/src/Pages/HomePage/Home.css
@@ -18,3 +18,12 @@
   text-align: center;
   /* margin: 30vw; */
 }
+.assignmentList{
+  display: flex;
+  align-items: center;
+  /* border: 1px solid black; */
+  /* background-color: #1e9fe9; */
+  justify-content: center;
+  margin: auto;
+  flex-wrap: wrap;
+}
