--- a/src/Admin/EvaluationPage/EvaluationPage.css
+++ b/src/Admin/EvaluationPage/EvaluationPage.css
@@ -44,5 +44,66 @@
   border-radius: 50%;
   padding: 1rem;
 }
-.Submissions {
+.assignmentQuestion{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  border: 1px solid gainsboro;
+  border-radius: 10px;
+  /* margin-bottom: 1rem; */
+  margin: 1rem auto;
+  width: 80%;
+  justify-content: center;
+}
+.assignmentQuestion{
+  font-size: 15px;
+  font-weight: 600;
+  color: #1e9fe9;
+}
+.assignmentAnswer{
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  font-size: 18px;
+  font-weight: 600;
+  color: black;
+  border: 1px solid gainsboro;
+  border-radius: 10px;
+  padding: 1rem;
+}
+.assignmentAnswer >p{
+  font-size: medium;
+}
+.buttons{
+  display: flex;
+  gap: 1rem;
+  margin: auto;
+  color: #1e9fe9;
+}
+.buttons > button{
+  background-color: white;
+  cursor: pointer;
+}
+.buttons > button:active{
+  box-shadow: 0 1px 5px #666;
+  transform: translatex(1px);
+}
+.buttons > button:first-child{
+  border: 1px solid green;
+  border-radius: 5px;
+  padding: 0.5rem;
+  color: green;
+  font-weight: 600;
+  font-size: 15px;
+  width: 12vw;
+}
+.buttons > button:last-child{
+  border: 1px solid red;
+  border-radius: 5px;
+  padding: 0.5rem;
+  color: red;
+  font-weight: 600;
+  font-size: 15px;
+  width: 12vw;
 }
