--- a/src/Admin/EvaluationPage/EvaluationPage.css
+++ b/src/Admin/EvaluationPage/EvaluationPage.css
@@ -44,7 +44,7 @@
   border-radius: 50%;
   padding: 1rem;
 }
-.assignmentQuestion{
+.assignmentQuestion {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -56,12 +56,12 @@
   width: 80%;
   justify-content: center;
 }
-.assignmentQuestion{
+.assignmentQuestion {
   font-size: 15px;
   font-weight: 600;
   color: #1e9fe9;
 }
-.assignmentAnswer{
+.assignmentAnswer {
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -72,24 +72,24 @@
   border-radius: 10px;
   padding: 1rem;
 }
-.assignmentAnswer >p{
+.assignmentAnswer > p {
   font-size: medium;
 }
-.buttons{
+.buttons {
   display: flex;
   gap: 1rem;
   margin: auto;
   color: #1e9fe9;
 }
-.buttons > button{
+.buttons > button {
   background-color: white;
   cursor: pointer;
 }
-.buttons > button:active{
+.buttons > button:active {
   box-shadow: 0 1px 5px #666;
   transform: translatex(1px);
 }
-.buttons > button:first-child{
+.buttons > button:first-child {
   border: 1px solid green;
   border-radius: 5px;
   padding: 0.5rem;
@@ -98,7 +98,7 @@
   font-size: 15px;
   width: 12vw;
 }
-.buttons > button:last-child{
+.buttons > button:last-child {
   border: 1px solid red;
   border-radius: 5px;
   padding: 0.5rem;
@@ -106,4 +106,28 @@
   font-weight: 600;
   font-size: 15px;
   width: 12vw;
+}
+
+.evaluationPageTabs {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin: 1rem auto;
+  font-weight: 500;
+  font-size: 20px;
+  width: max-content;
+  color: #1e9fe9;
+}
+.evaluationPageTabs > div {
+  cursor: pointer;
+  padding: 0.5rem;
+  border-bottom: 1px solid gainsboro;
+}
+
+.studentReport{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
