--- a/src/Components/UserCard/UserCard.css
+++ b/src/Components/UserCard/UserCard.css
@@ -14,6 +14,7 @@
   cursor: pointer;
   position: relative;
   overflow: hidden;
+  color: #1e9fe9;
 }
 .usercard:hover {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
