--- a/src/Pages/AssignmentPage/AssignmentSubmissionPage.css
+++ b/src/Pages/AssignmentPage/AssignmentSubmissionPage.css
@@ -1,43 +1,50 @@
-.AnswerInput{
-    width: 70%;
-    height: 30vh;
-    font-size: 1.2em;
-    padding: 0.5em;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    background-color: #f8f8f8;
+.AnswerInput {
+  width: 70%;
+  height: 30vh;
+  font-size: 1.2em;
+  padding: 0.5em;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
 }
-.AnswerInput::placeholder{
-    color: #aaa;
-    font-size: x-large;
+.AnswerInput::placeholder {
+  color: #aaa;
+  font-size: x-large;
 }
-.AnswerForm{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    gap: 2rem;
-}
-
-.AnswerButton{
-    width: 20%;
-    height: 5vh;
-    font-size: 1.2em;
-    padding: 0.5em;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    background-color: #f8f8f8;
-    color: #1e9fe9;
+.AnswerForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  gap: 2rem;
 }
 
-.assignmentPage{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* border: 1px solid black; */
-    color: #1e9fe9;
+.AnswerButton {
+  width: 20%;
+  height: 5vh;
+  font-size: 1.2em;
+  padding: 0.5em;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  color: #1e9fe9;
+}
+
+.assignmentPage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* border: 1px solid black; */
+  color: #1e9fe9;
+}
+.question {
+  width: 80%;
+  margin: 2rem auto;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
