--- a/src/Components/ReportTable/ReportTable.css
+++ b/src/Components/ReportTable/ReportTable.css
@@ -1,49 +1,44 @@
-.reportTable{
-    width: max-content;
-    padding: 1rem;
-    border-collapse: collapse;
-    border-spacing: 0;
-    /* border: 1px solid #ddd; */
-    font-size: 14px;
-    font-family: 'Roboto', sans-serif;
-    color: #333;
-    margin-bottom: 20px;
-    /* align-items: flex-end; */
-    /* text-align: center; */
+.reportTable {
+  width: max-content;
+  padding: 1rem;
+  border-collapse: collapse;
+  border-spacing: 0;
+  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+  color: #333;
   box-shadow: 0 0 4px rgb(204, 204, 204);
-
+  margin: 1rem auto;
 }
-.tableTitle{
-    font-size: 1.5rem;
-    font-weight: 500;
-    color: #1e9fe9;
-    margin-bottom: 1rem;
+.tableTitle {
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #1e9fe9;
+  margin-bottom: 1rem;
 }
-.tableItem{
-    font-weight: bold;
-    padding: 8px;
-    display: flex;
-
+.tableItem {
+  font-weight: bold;
+  padding: 8px;
+  display: flex;
+  /* border: 1px solid brown; */
 }
-.days{
-    color: #1e9fe9;
-    width: 6rem;
-    /* border: 1px solid darkblue; */
-    /* text-align: center; */
+.days {
+  color: #1e9fe9;
+  width: 4rem;
+  /* border: 1px solid darkblue; */
+  /* text-align: center; */
 }
-.amount{
-    width: 3rem;
-    color: #0a96e8;
-    text-align: left;
-    /* border: 1px solid darkblue; */
-    padding-right: 1rem;
-
+.amount {
+  width: 2rem;
+  color: #0a96e8;
+  text-align: left;
+  /* border: 1px solid darkblue; */
+  padding-right: 1rem;
 }
-.percentage{
-    color: #52048d;
-    /* border: 1px solid darkblue; */
-    width: 4rem;
+.percentage {
+  color: #52048d;
+  /* border: 1px solid darkblue; */
+  width: 4rem;
 }
-.red{
-    color: red;
+.red {
+  color: red;
 }
