--- a/src/Pages/UserLoginPage/userLoginPage.css
+++ b/src/Pages/UserLoginPage/userLoginPage.css
@@ -57,3 +57,19 @@
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   cursor: pointer;
 }
+
+@media screen and (max-width: 560px) {
+.form > form {
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  border-radius: 10px;
+  width: 20rem;
+  height: 25rem;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+}
+.form > form > h1 {
+  font-size: large;
+  margin-bottom: 1rem;
+}
+}
