--- a/src/Admin/ReportPage/ReportPage.css
+++ b/src/Admin/ReportPage/ReportPage.css
@@ -85,3 +85,11 @@
   display: flex;
   flex-direction: column;
 }
+.chartWrapper{
+  width: 100%;
+  height: 20rem;
+  margin: 2rem auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
